--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
         <button class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
-        <button class="btn btn-primary text-center" type="button">
+        <button id="apagar" onclick="negociacao.apaga()" class="btn btn-primary text-center" type="button">
             Apagar
         </button>
     </div> 
@@ -56,6 +56,17 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script>
         let negociacao = new NegociacaoController();
+    </script>
+
+    <script type="text/javascript">
+        let lista = new Proxy(new ListaNegociacoes(), {
+
+            set: function(target,prop,value, receiver){
+                console.log(` valor anterior: ${target[prop]} novo valor: ${value}`);
+                return Reflect.set(target,prop,value,receiver);
+            }
+        });
+        negociacaoProxy._quantidade = 10;
     </script>
     
 </body>
