--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button onclick="negociacao.importaNegociacoes()" class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
         <button id="apagar" onclick="negociacao.apaga()" class="btn btn-primary text-center" type="button">
@@ -56,6 +56,7 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
+    <script src="js/app/services/NegociacaoService.js"></script>
     <script>
         let negociacao = new NegociacaoController();
     </script>
