--- a/client/post.html
+++ b/client/post.html
@@ -1,5 +1,6 @@
 <!-- aluraframe/client/post.html -->
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Negociações</title>
@@ -12,22 +13,23 @@
 
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>        
-        </div>    
+            <input type="date" id="data" class="form-control" required autofocus />
+        </div>
 
         <div class="form-group">
             <label for="quantidade">Quantidade</label>
-            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" required/>
+            <input type="number" min="1" step="1" id="quantidade" class="form-control" value="1" required />
         </div>
 
         <div class="form-group">
             <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control"  min="0.01" step="0.01" value="0.0" required />
+            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0" required />
         </div>
 
         <button class="btn btn-primary" type="submit" onclick="sendPost(event)">Enviar dados para servidor</button>
     </form>
 
+    <script src="js/app/services/HttpService.js"></script>
     <script>
 
         function sendPost(event) {
@@ -40,33 +42,23 @@
             inputValor = $('#valor');
 
             let negociacao = {
-                data : inputData.value,
-                quantidade : inputQuantidade.value,
-                valor : inputValor.value
+                data: inputData.value,
+                quantidade: inputQuantidade.value,
+                valor: inputValor.value
             };
-            
 
-            let xhr = new XMLHttpRequest();
+            new HttpService()
+                .post('/negociacoes', negociacao)
+                .then(() => {
+                    inputData.value = '';
+                    inputQuantidade.value = 1;
+                    inputValor.value = 0.0;
+                    inputData.focus();
+                    alert('Negociação enviada com sucesso');
+                }).catch(erro => alert(`Não foi possivel enviar a negociação: ${erro}`))
 
-            xhr.open('POST','/negociacoes',true);
-            xhr.setRequestHeader("Content-type", "application/json");
-
-            xhr.onreadystatechange = () => {
-                if(xhr.readyState == 4){
-                    if(xhr.status == 200){
-                        inputData.value = '';
-                        inputQuantidade.value = 1;
-                        inputValor.value = 0.0;
-                        inputData.focus();
-                        alert('Negociação enviada com sucesso');
-                    }else{
-                        alert(`Não foi possivel enviar a negociação: ${xhr.responseText}`);
-                    }
-                }
-            }
-
-            xhr.send(JSON.stringify(negociacao));
         }
     </script>
 </body>
+
 </html>
