--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,8 @@
     <script src="js/app/services/NegociacaoService.js"></script>
     <script src="js/app/services/HttpService.js"></script>
     <script src="js/app/services/ConnectionFactory.js"></script>
+    <script src="js/app/dao/NegociacaoDao.js"></script>
+
     <script>
         let negociacao = new NegociacaoController();
     </script>
